PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) int __stdcall DPLAddArcToPath(int instanceID, double CenterX, double CenterY, double TotalAngle);
__declspec(dllimport) int __stdcall DPLAddBoxToPath(int instanceID, double Left, double Top, double Width, double Height);
__declspec(dllimport) int __stdcall DPLAddCJKFont(int instanceID, int CJKFontID);
__declspec(dllimport) int __stdcall DPLAddCurveToPath(int instanceID, double CtAX, double CtAY, double CtBX, double CtBY, double EndX, double EndY);
__declspec(dllimport) int __stdcall DPLAddEmbeddedFile(int instanceID, wchar_t * FileName, wchar_t * MIMEType);
__declspec(dllimport) int __stdcall DPLAddEmbeddedFileA(int instanceID, char * FileName, char * MIMEType);
__declspec(dllimport) int __stdcall DPLAddFileAttachment(int instanceID, wchar_t * Title, int EmbeddedFileID);
__declspec(dllimport) int __stdcall DPLAddFileAttachmentA(int instanceID, char * Title, int EmbeddedFileID);
__declspec(dllimport) int __stdcall DPLAddFormFieldChoiceSub(int instanceID, int Index, wchar_t * SubName, wchar_t * DisplayName);
__declspec(dllimport) int __stdcall DPLAddFormFieldChoiceSubA(int instanceID, int Index, char * SubName, char * DisplayName);
__declspec(dllimport) int __stdcall DPLAddFormFieldSub(int instanceID, int Index, wchar_t * SubName);
__declspec(dllimport) int __stdcall DPLAddFormFieldSubA(int instanceID, int Index, char * SubName);
__declspec(dllimport) int __stdcall DPLAddFormFont(int instanceID, int FontID);
__declspec(dllimport) int __stdcall DPLAddFreeTextAnnotation(int instanceID, double Left, double Top, double Width, double Height, wchar_t * Text, int Angle, int Options);
__declspec(dllimport) int __stdcall DPLAddFreeTextAnnotationA(int instanceID, double Left, double Top, double Width, double Height, char * Text, int Angle, int Options);
__declspec(dllimport) int __stdcall DPLAddFreeTextAnnotationEx(int instanceID, double Left, double Top, double Width, double Height, wchar_t * Text, int Angle, int Options, int Transparency);
__declspec(dllimport) int __stdcall DPLAddFreeTextAnnotationExA(int instanceID, double Left, double Top, double Width, double Height, char * Text, int Angle, int Options, int Transparency);
__declspec(dllimport) int __stdcall DPLAddGlobalJavaScript(int instanceID, wchar_t * PackageName, wchar_t * JavaScript);
__declspec(dllimport) int __stdcall DPLAddGlobalJavaScriptA(int instanceID, char * PackageName, char * JavaScript);
__declspec(dllimport) int __stdcall DPLAddImageFromFile(int instanceID, wchar_t * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddImageFromFileA(int instanceID, char * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddImageFromFileOffset(int instanceID, wchar_t * FileName, int Offset, int DataLength, int Options);
__declspec(dllimport) int __stdcall DPLAddImageFromFileOffsetA(int instanceID, char * FileName, int Offset, int DataLength, int Options);
__declspec(dllimport) int __stdcall DPLAddImageFromString(int instanceID, char * Source, int Options);
__declspec(dllimport) int __stdcall DPLAddLGIDictToPage(int instanceID, wchar_t * DictContent);
__declspec(dllimport) int __stdcall DPLAddLGIDictToPageA(int instanceID, char * DictContent);
__declspec(dllimport) int __stdcall DPLAddLineToPath(int instanceID, double EndX, double EndY);
__declspec(dllimport) int __stdcall DPLAddLinkToDestination(int instanceID, double Left, double Top, double Width, double Height, int DestID, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToEmbeddedFile(int instanceID, double Left, double Top, double Width, double Height, int EmbeddedFileID, wchar_t * Title, wchar_t * Contents, int IconType, int Transpareny);
__declspec(dllimport) int __stdcall DPLAddLinkToEmbeddedFileA(int instanceID, double Left, double Top, double Width, double Height, int EmbeddedFileID, char * Title, char * Contents, int IconType, int Transpareny);
__declspec(dllimport) int __stdcall DPLAddLinkToFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int Page, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int Page, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToFileDest(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, wchar_t * NamedDest, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToFileDestA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, char * NamedDest, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToFileEx(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int DestPage, int NewWindow, int Options, int Zoom, int DestType, double DestLeft, double DestTop, double DestRight, double DestBottom);
__declspec(dllimport) int __stdcall DPLAddLinkToFileExA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int DestPage, int NewWindow, int Options, int Zoom, int DestType, double DestLeft, double DestTop, double DestRight, double DestBottom);
__declspec(dllimport) int __stdcall DPLAddLinkToJavaScript(int instanceID, double Left, double Top, double Width, double Height, wchar_t * JavaScript, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToJavaScriptA(int instanceID, double Left, double Top, double Width, double Height, char * JavaScript, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToLocalFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToLocalFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToPage(int instanceID, double Left, double Top, double Width, double Height, int Page, double Position, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToWeb(int instanceID, double Left, double Top, double Width, double Height, wchar_t * Link, int Options);
__declspec(dllimport) int __stdcall DPLAddLinkToWebA(int instanceID, double Left, double Top, double Width, double Height, char * Link, int Options);
__declspec(dllimport) int __stdcall DPLAddNoteAnnotation(int instanceID, double Left, double Top, int AnnotType, double PopupLeft, double PopupTop, double PopupWidth, double PopupHeight, wchar_t * Title, wchar_t * Contents, double Red, double Green, double Blue, int Open);
__declspec(dllimport) int __stdcall DPLAddNoteAnnotationA(int instanceID, double Left, double Top, int AnnotType, double PopupLeft, double PopupTop, double PopupWidth, double PopupHeight, char * Title, char * Contents, double Red, double Green, double Blue, int Open);
__declspec(dllimport) int __stdcall DPLAddOpenTypeFontFromFile(int instanceID, wchar_t * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddOpenTypeFontFromFileA(int instanceID, char * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddPageLabels(int instanceID, int Start, int Style, int Offset, wchar_t * Prefix);
__declspec(dllimport) int __stdcall DPLAddPageLabelsA(int instanceID, int Start, int Style, int Offset, char * Prefix);
__declspec(dllimport) int __stdcall DPLAddPageMatrix(int instanceID, double xscale, double yscale, double xoffset, double yoffset);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int Page, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int Page, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToFileDest(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, wchar_t * NamedDest, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToFileDestA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, char * NamedDest, double Position, int NewWindow, int Options);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToFileEx(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int DestPage, int NewWindow, int Options, int Zoom, int DestType, double DestLeft, double DestTop, double DestRight, double DestBottom);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToFileExA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int DestPage, int NewWindow, int Options, int Zoom, int DestType, double DestLeft, double DestTop, double DestRight, double DestBottom);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToLocalFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddRelativeLinkToLocalFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddSVGAnnotationFromFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddSVGAnnotationFromFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddSWFAnnotationFromFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, wchar_t * Title, int Options);
__declspec(dllimport) int __stdcall DPLAddSWFAnnotationFromFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, char * Title, int Options);
__declspec(dllimport) int __stdcall DPLAddSeparationColor(int instanceID, wchar_t * ColorName, double C, double M, double Y, double K, int Options);
__declspec(dllimport) int __stdcall DPLAddSeparationColorA(int instanceID, char * ColorName, double C, double M, double Y, double K, int Options);
__declspec(dllimport) int __stdcall DPLAddStampAnnotation(int instanceID, double Left, double Top, double Width, double Height, int StampType, wchar_t * Title, wchar_t * Contents, double Red, double Green, double Blue, int Options);
__declspec(dllimport) int __stdcall DPLAddStampAnnotationA(int instanceID, double Left, double Top, double Width, double Height, int StampType, char * Title, char * Contents, double Red, double Green, double Blue, int Options);
__declspec(dllimport) int __stdcall DPLAddStampAnnotationFromImage(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, wchar_t * Title, wchar_t * Contents, double Red, double Green, double Blue, int Options);
__declspec(dllimport) int __stdcall DPLAddStampAnnotationFromImageA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, char * Title, char * Contents, double Red, double Green, double Blue, int Options);
__declspec(dllimport) int __stdcall DPLAddStampAnnotationFromImageID(int instanceID, double Left, double Top, double Width, double Height, int ImageID, wchar_t * Title, wchar_t * Contents, double Red, double Green, double Blue, int Options);
__declspec(dllimport) int __stdcall DPLAddStampAnnotationFromImageIDA(int instanceID, double Left, double Top, double Width, double Height, int ImageID, char * Title, char * Contents, double Red, double Green, double Blue, int Options);