PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas


Public Declare Function DPLAddArcToPath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddArcToPath" ( _
  ByVal iInstanceID As Long, ByVal dCenterX As Double, _
  ByVal dCenterY As Double, ByVal dTotalAngle As Double) As Long
Public Declare Function DPLAddBoxToPath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddBoxToPath" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double) As Long
Public Declare Function DPLAddCJKFont LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddCJKFont" ( _
  ByVal iInstanceID As Long, ByVal iCJKFontID As Long) As Long
Public Declare Function DPLAddCurveToPath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddCurveToPath" ( _
  ByVal iInstanceID As Long, ByVal dCtAX As Double, ByVal dCtAY As Double, _
  ByVal dCtBX As Double, ByVal dCtBY As Double, ByVal dEndX As Double, _
  ByVal dEndY As Double) As Long
Public Declare Function DPLAddEmbeddedFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddEmbeddedFileA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String, _
  ByVal sMIMEType As String) As Long
Public Declare Function DPLAddFileAttachment LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddFileAttachmentA" ( _
  ByVal iInstanceID As Long, ByVal sTitle As String, _
  ByVal iEmbeddedFileID As Long) As Long
Public Declare Function DPLAddFormFieldChoiceSub LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddFormFieldChoiceSubA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal sSubName As String, _
  ByVal sDisplayName As String) As Long
Public Declare Function DPLAddFormFieldSub LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddFormFieldSubA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sSubName As String) As Long
Public Declare Function DPLAddFormFont LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddFormFont" ( _
  ByVal iInstanceID As Long, ByVal iFontID As Long) As Long
Public Declare Function DPLAddFreeTextAnnotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddFreeTextAnnotationA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sText As String, _
  ByVal iAngle As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLAddFreeTextAnnotationEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddFreeTextAnnotationExA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sText As String, _
  ByVal iAngle As Long, ByVal iOptions As Long, _
  ByVal iTransparency As Long) As Long
Public Declare Function DPLAddGlobalJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddGlobalJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal sPackageName As String, _
  ByVal sJavaScript As String) As Long
Public Declare Function DPLAddImageFromFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddImageFromFileA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddImageFromFileOffset LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddImageFromFileOffsetA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String, ByVal iOffset As Long, _
  ByVal iDataLength As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLAddImageFromString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddImageFromString" ( _
  ByVal iInstanceID As Long, ByVal sSource As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddLGIDictToPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLGIDictToPageA" ( _
  ByVal iInstanceID As Long, ByVal sDictContent As String) As Long
Public Declare Function DPLAddLineToPath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLineToPath" ( _
  ByVal iInstanceID As Long, ByVal dEndX As Double, _
  ByVal dEndY As Double) As Long
Public Declare Function DPLAddLinkToDestination LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToDestination" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal iDestID As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddLinkToEmbeddedFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToEmbeddedFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal iEmbeddedFileID As Long, ByVal sTitle As String, _
  ByVal sContents As String, ByVal iIconType As Long, _
  ByVal iTranspareny As Long) As Long
Public Declare Function DPLAddLinkToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iPage As Long, ByVal dPosition As Double, ByVal iNewWindow As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddLinkToFileDest LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToFileDestA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal sNamedDest As String, ByVal dPosition As Double, _
  ByVal iNewWindow As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLAddLinkToFileEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToFileExA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iDestPage As Long, ByVal iNewWindow As Long, ByVal iOptions As Long, _
  ByVal iZoom As Long, ByVal iDestType As Long, ByVal dDestLeft As Double, _
  ByVal dDestTop As Double, ByVal dDestRight As Double, _
  ByVal dDestBottom As Double) As Long
Public Declare Function DPLAddLinkToJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sJavaScript As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddLinkToLocalFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToLocalFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddLinkToPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToPage" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal iPage As Long, _
  ByVal dPosition As Double, ByVal iOptions As Long) As Long
Public Declare Function DPLAddLinkToWeb LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddLinkToWebA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sLink As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddNoteAnnotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddNoteAnnotationA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal iAnnotType As Long, ByVal dPopupLeft As Double, _
  ByVal dPopupTop As Double, ByVal dPopupWidth As Double, _
  ByVal dPopupHeight As Double, ByVal sTitle As String, _
  ByVal sContents As String, ByVal dRed As Double, ByVal dGreen As Double, _
  ByVal dBlue As Double, ByVal iOpen As Long) As Long
Public Declare Function DPLAddOpenTypeFontFromFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddOpenTypeFontFromFileA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddPageLabels LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddPageLabelsA" ( _
  ByVal iInstanceID As Long, ByVal iStart As Long, ByVal iStyle As Long, _
  ByVal iOffset As Long, ByVal sPrefix As String) As Long
Public Declare Function DPLAddPageMatrix LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddPageMatrix" ( _
  ByVal iInstanceID As Long, ByVal dxscale As Double, ByVal dyscale As Double, _
  ByVal dxoffset As Double, ByVal dyoffset As Double) As Long
Public Declare Function DPLAddRelativeLinkToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddRelativeLinkToFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iPage As Long, ByVal dPosition As Double, ByVal iNewWindow As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddRelativeLinkToFileDest LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddRelativeLinkToFileDestA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal sNamedDest As String, ByVal dPosition As Double, _
  ByVal iNewWindow As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLAddRelativeLinkToFileEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddRelativeLinkToFileExA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iDestPage As Long, ByVal iNewWindow As Long, ByVal iOptions As Long, _
  ByVal iZoom As Long, ByVal iDestType As Long, ByVal dDestLeft As Double, _
  ByVal dDestTop As Double, ByVal dDestRight As Double, _
  ByVal dDestBottom As Double) As Long
Public Declare Function DPLAddRelativeLinkToLocalFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddRelativeLinkToLocalFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddSVGAnnotationFromFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddSVGAnnotationFromFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddSWFAnnotationFromFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddSWFAnnotationFromFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal sTitle As String, ByVal iOptions As Long) As Long
Public Declare Function DPLAddSeparationColor LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddSeparationColorA" ( _
  ByVal iInstanceID As Long, ByVal sColorName As String, ByVal dC As Double, _
  ByVal dM As Double, ByVal dY As Double, ByVal dK As Double, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAddStampAnnotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddStampAnnotationA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal iStampType As Long, _
  ByVal sTitle As String, ByVal sContents As String, ByVal dRed As Double, _
  ByVal dGreen As Double, ByVal dBlue As Double, ByVal iOptions As Long) As Long
Public Declare Function DPLAddStampAnnotationFromImage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddStampAnnotationFromImageA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal sTitle As String, ByVal sContents As String, ByVal dRed As Double, _
  ByVal dGreen As Double, ByVal dBlue As Double, ByVal iOptions As Long) As Long
Public Declare Function DPLAddStampAnnotationFromImageID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddStampAnnotationFromImageIDA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
